libdocument: Add missing annotation to ev_document_factory_get_document.

Pointed out by Lucas Stadler.

https://bugzilla.gnome.org/show_bug.cgi?id=635705