libdocument/ev-document-factory.c
@@ -218,7 +218,7 @@ ev_document_factory_load_uri (const char *uri, gboolean fast, GError **error)
  * If the document is encrypted, it is returned but also @error is set to
  * %EV_DOCUMENT_ERROR_ENCRYPTED.
  *
- * Returns: a new #EvDocument, or %NULL.
+ * Returns: (transfer full): a new #EvDocument, or %NULL.
  */
 EvDocument *
 ev_document_factory_get_document (const char *uri, GError **error)
